New TMob.java added - will hold methods for Mobile automation